--- a/src/execution/operator/helper/CMakeLists.txt
+++ b/src/execution/operator/helper/CMakeLists.txt
@@ -23,7 +23,8 @@ add_library_unity(
   physical_transaction.cpp
   physical_update_extensions.cpp
   physical_vacuum.cpp
-  physical_verify_vector.cpp)
+  physical_verify_vector.cpp
+  physical_ussr_insertion.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_operator_helper>
     PARENT_SCOPE)
