--- a/src/execution/physical_plan/CMakeLists.txt
+++ b/src/execution/physical_plan/CMakeLists.txt
@@ -45,7 +45,8 @@ add_library_unity(
   plan_unnest.cpp
   plan_expression_get.cpp
   plan_recursive_cte.cpp
-  plan_cte.cpp)
+  plan_cte.cpp
+  plan_ussr_insertion.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_physical_plan>
     PARENT_SCOPE)
