Introduce a new nightlytest binary

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -45,14 +45,17 @@ else()
 endif()
 
 add_executable(unittest unittest.cpp ${ALL_OBJECT_FILES})
+add_executable(nightlytest unittest.cpp ${ALL_NIGHTLY_OBJECT_FILES})
 
 if(NOT WIN32
    AND NOT SUN
    AND NOT ZOS)
   target_link_libraries(unittest duckdb test_helpers)
+  target_link_libraries(nightlytest duckdb test_helpers)
   if(${BUILD_TPCE})
     target_link_libraries(unittest tpce)
   endif()
 else()
   target_link_libraries(unittest duckdb_static test_helpers)
+  target_link_libraries(nightlytest duckdb_static test_helpers)
 endif()
