--- a/test/sqlite/CMakeLists.txt
+++ b/test/sqlite/CMakeLists.txt
@@ -11,3 +11,6 @@ add_library_unity(test_sqlite OBJECT ${SQLITE_TEST_RUNNER_SOURCES})
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:test_sqlite>
     PARENT_SCOPE)
+set(ALL_NIGHTLY_OBJECT_FILES
+    ${ALL_NIGHTLY_OBJECT_FILES} $<TARGET_OBJECTS:test_sqlite>
+    PARENT_SCOPE)
