Allow DUCKDB_EXPLICIT_VERSION to be propagated to DUCKDB_NORMALIZED_VERSION
This means that for example the extension folder would look like:
```
% DUCKDB_EXPLICIT_VERSION=v1.3.0-rc0 make
% tree build/release/repository
build/release/repository
└── v1.3.0-rc0
    └── osx_arm64
        ├── core_functions.duckdb_extension
        └── parquet.duckdb_extension
```
instead of having the first 10 char of the sha, same for default extension metadata

and this is propagated to the CLI initial message and the SQL layer
```
$ ./build/release/duckdb
DuckDB v1.3.0-rc0 (Ossivalis) a1372fe956
Enter ".help" for usage hints.
Connected to a transient in-memory database.
Use ".open FILENAME" to reopen on a persistent database.
D PRAGMA version;
┌─────────────────┬────────────┬───────────┐
│ library_version │ source_id  │ codename  │
│     varchar     │  varchar   │  varchar  │
├─────────────────┼────────────┼───────────┤
│ v1.3.0-rc0      │ a1372fe956 │ Ossivalis │
└─────────────────┴────────────┴───────────┘
```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -362,7 +362,8 @@ endif()
 
 string(SUBSTRING "${GIT_COMMIT_HASH}" 0 10 GIT_COMMIT_HASH)
 
-if(NOT "${DUCKDB_EXPLICIT_VERSION}" STREQUAL "")
+if(DUCKDB_EXPLICIT_VERSION)
+  # Use with care, this forces the version to the provided string, potentially breaking invariants in the process
   set(DUCKDB_VERSION "${DUCKDB_EXPLICIT_VERSION}")
 elseif(DUCKDB_DEV_ITERATION EQUAL 0)
   # on a tag; directly use the version
@@ -379,7 +380,9 @@ endif()
 
 string(REGEX MATCH ".*dev.*" DUCKDB_EXTENSION_FOLDER_IS_VERSION "${DUCKDB_VERSION}")
 
-if(DUCKDB_EXTENSION_FOLDER_IS_VERSION AND NOT GIT_COMMIT_HASH STREQUAL "")
+if(DUCKDB_EXPLICIT_VERSION)
+  set(DUCKDB_NORMALIZED_VERSION "${DUCKDB_EXPLICIT_VERSION}")
+elseif(DUCKDB_EXTENSION_FOLDER_IS_VERSION AND NOT GIT_COMMIT_HASH STREQUAL "")
   set(DUCKDB_NORMALIZED_VERSION "${GIT_COMMIT_HASH}")
 else()
   set(DUCKDB_NORMALIZED_VERSION "${DUCKDB_VERSION}")
