--- a/tools/pythonpkg/pyproject.toml
+++ b/tools/pythonpkg/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
 	"setuptools>=60",
-	"setuptools_scm>=6.4",
+	"setuptools_scm>=6.4,<8.0",
 	"pybind11>=2.6.0",
 ]
 build-backend = "setuptools.build_meta"
