--- a/src/common/settings.json
+++ b/src/common/settings.json
@@ -738,6 +738,13 @@
         ]
     },
     {
+        "name": "profiling_coverage",
+        "description": "The profiling level (SELECT or ALL)",
+        "type": "VARCHAR",
+        "scope": "local",
+        "custom_implementation": true
+    },
+    {
         "name": "profiling_mode",
         "description": "The profiling mode (STANDARD or DETAILED)",
         "type": "VARCHAR",
