--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library_unity(
   bind_helpers.cpp
   box_renderer.cpp
   cgroups.cpp
+  csv_utils.cpp
   complex_json.cpp
   compressed_file_system.cpp
   constants.cpp
