--- a/src/main/capi/CMakeLists.txt
+++ b/src/main/capi/CMakeLists.txt
@@ -22,10 +22,11 @@ add_library_unity(
   result-c.cpp
   scalar_function-c.cpp
   stream-c.cpp
-  table_function-c.cpp
   table_description-c.cpp
+  table_function-c.cpp
   threading-c.cpp
-  value-c.cpp)
+  value-c.cpp
+error_data-c.cpp)
 
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_main_capi>
