--- a/.github/actions/build_extensions_dockerized/action.yml
+++ b/.github/actions/build_extensions_dockerized/action.yml
@@ -4,7 +4,7 @@ inputs:
   # Build config
   run_tests:
     description: 'Run extension tests after build'
-    default: 1
+    default: '1'
   duckdb_arch:
     description: 'Provide DUCKDB_PLATFORM to build system for cross compilation'
     default: ''
@@ -108,6 +108,6 @@ runs:
 
       - name: Test extension (inside docker)
         shell: bash
-        if: ${{ inputs.run_tests == 1 }}
+        if: ${{ inputs.run_tests == '1' && inputs.duckdb_arch != 'linux_arm64'}}
         run: |
           docker run --env-file=docker_env.txt -v `pwd`:/duckdb_build_dir -v `pwd`/ccache_dir:/ccache_dir duckdb/${{ inputs.duckdb_arch }} make test_release
