--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -60,7 +60,7 @@ jobs:
  win-release-64:
     # Builds binaries for windows_amd64
     name: Windows (64 Bit)
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
       with:
@@ -150,7 +150,7 @@ jobs:
  win-release-32:
     name: Windows (32 Bit)
     if: github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' || inputs.run_all == 'true'
-    runs-on: windows-2019
+    runs-on: windows-latest
     needs: win-release-64
 
     steps:
@@ -190,7 +190,7 @@ jobs:
  win-release-arm64:
    name: Windows (ARM64)
    if: github.ref == 'refs/heads/main' || github.repository != 'duckdb/duckdb' || inputs.run_all == 'true'
-   runs-on: windows-2019
+   runs-on: windows-latest
    needs: win-release-64
 
    steps:
@@ -253,7 +253,7 @@ jobs:
 
  mingw:
      name: MinGW (64 Bit)
-     runs-on: windows-2019
+     runs-on: windows-latest
      if: ${{ inputs.skip_tests != 'true' }}
      needs: win-release-64
      steps:
@@ -297,7 +297,7 @@ jobs:
  win-extensions-64:
    # Builds extensions for windows_amd64
    name: Windows Extensions (64-bit)
-   runs-on: windows-2019
+   runs-on: windows-latest
    needs: win-release-64
    steps:
      - name: Keep \n line endings
@@ -343,7 +343,7 @@ jobs:
       duckdb_sha: ${{ github.sha }}
 
  win-packaged-upload:
-   runs-on: windows-2019
+   runs-on: windows-latest
    needs:
      - win-release-64
      - win-release-arm64
