--- a/src/logging/CMakeLists.txt
+++ b/src/logging/CMakeLists.txt
@@ -1,11 +1,12 @@
 add_library_unity(
   duckdb_logging
   OBJECT
-  logger.cpp
   log_manager.cpp
   log_storage.cpp
-  logging.cpp
-  log_types.cpp)
+  log_types.cpp
+  log_utils.cpp
+  logger.cpp
+  logging.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_logging>
     PARENT_SCOPE)
