--- a/.github/workflows/OSX.yml
+++ b/.github/workflows/OSX.yml
@@ -305,72 +305,79 @@ jobs:
     # needs: upload-osx-extensions
     ### This needs to be reworked, currently some info are missing
     # if: false
-    runs-on: ${{ matrix.config.runner }}
+    # runs-on: ${{ matrix.config.runner }}
+    uses: duckdb/duckdb-build-status/.github/workflows/VerifyBuild.yml@main
     strategy:
       matrix:
-        config: [ { runner: macos-latest, duckdb_arch: osx_amd64}, {runner: macos-14, duckdb_arch: osx_arm64 }]
-    steps:
+        config: [ { runner: macos-latest, duckdb_arch: osx_amd64, duckdb_binary: osx-amd64 }, {runner: macos-14, duckdb_arch: osx_arm64, duckdb_binary: osx-arm64 }]
+    with:
+      runs_on: ${{ matrix.config.runs_on }}
+      duckdb_arch: ${{ matrix.config.duckdb_arch }}
+      duckdb_binary: ${{ matrix.config.duckdb_binary }}
+      nightly_build: 'osx'
+      branch: 'v1.3-ossivalis'
+    # steps:
     # - uses: actions/checkout@v4
     #   with:
     #     fetch-depth: 0
     #     ref: ${{ inputs.git_ref }}
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+    # - uses: actions/setup-python@v5
+    #   with:
+    #     python-version: '3.12'
 
-    - name: Install Python dependencies
-      run: pip install duckdb docker
+    # - name: Install Python dependencies
+    #   run: pip install duckdb docker
           
-    - name: Checkout repo with the scripts
-      uses: actions/checkout@v4
-      with:
-        repository: ${{ github.repository_owner }}/duckdb-build-status
+    # - name: Checkout repo with the scripts
+    #   uses: actions/checkout@v4
+    #   with:
+    #     repository: ${{ github.repository_owner }}/duckdb-build-status
 
-    - name: Checkout repo with extensions config file
-      uses: actions/checkout@v4
-      with:
-          sparse-checkout: |
-              .github/config
-          path: ext
-          repository: duckdb/duckdb
+    # - name: Checkout repo with extensions config file
+    #   uses: actions/checkout@v4
+    #   with:
+    #       sparse-checkout: |
+    #           .github/config
+    #       path: ext
+    #       repository: duckdb/duckdb
 
-    - name: Download atrifacts to test
-      shell: bash
-      run: |
+    # - name: Download atrifacts to test
+    #   shell: bash
+    #   run: |
         
-        RUN_ID=$(gh run list --workflow "InvokeCI.yml" --repo duckdb/duckdb --branch v1.3-ossivalis --json databaseId,status,headBranch,headSha -q '.[0].databaseId')
-        # RUN_ID=$(gh run list --workflow "InvokeCI.yml" --branch ${{ github.ref_name }} --json databaseId,status,headBranch,headSha -q '.[0].databaseId')
+    #     RUN_ID=$(gh run list --workflow "InvokeCI.yml" --repo duckdb/duckdb --branch v1.3-ossivalis --json databaseId,status,headBranch,headSha -q '.[0].databaseId')
+    #     # RUN_ID=$(gh run list --workflow "InvokeCI.yml" --branch ${{ github.ref_name }} --json databaseId,status,headBranch,headSha -q '.[0].databaseId')
 
-        # Download cli artifacts from that run
-        gh run download "$RUN_ID" --repo "duckdb/duckdb" -n "duckdb-binaries-osx"
-        unzip duckdb_cli-*.zip -d duckdb_path
+    #     # Download cli artifacts from that run
+    #     gh run download "$RUN_ID" --repo "duckdb/duckdb" -n "duckdb-binaries-osx"
+    #     unzip duckdb_cli-*.zip -d duckdb_path
 
-        ls -lah duckdb_path
+    #     ls -lah duckdb_path
 
-        python scripts/verify_and_test.py \
-          --nightly_build "osx" \
-          --architecture ${{ matrix.config.duckdb_arch }} \
-          --run_id $RUN_ID \
-          --runs_on ${{ matrix.config.runner }} \
-          --branch v1.3-ossivalis
-          # --branch ${{ github.ref_name }}
+    #     python scripts/verify_and_test.py \
+    #       --nightly_build "osx" \
+    #       --architecture ${{ matrix.config.duckdb_arch }} \
+    #       --run_id $RUN_ID \
+    #       --runs_on ${{ matrix.config.runner }} \
+    #       --branch v1.3-ossivalis
+    #       # --branch ${{ github.ref_name }}
 
-        ls -lah
+    #     ls -lah
 
-        # these should be downloaded to test local
-        # gh run download "$RUN_ID" --repo "duckdb/duckdb" -n "duckdb-extensions-${{ matrix.config.duckdb_arch }}"
+    #     # these should be downloaded to test local
+    #     # gh run download "$RUN_ID" --repo "duckdb/duckdb" -n "duckdb-extensions-${{ matrix.config.duckdb_arch }}"
 
-    - name: Upload actions for extensions
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: EXT_${{ matrix.config.duckdb_arch }}
-        path: |
-          v1.3-ossivalis_list_failed_ext_*.csv
-          v1.3-ossivalis_non_matching_sha_*.csv
-          v1.3-ossivalis_tested_platforms_*.csv
-        if-no-files-found: ignore
+    # - name: Upload actions for extensions
+    #   if: always()
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: EXT_${{ matrix.config.duckdb_arch }}
+    #     path: |
+    #       v1.3-ossivalis_list_failed_ext_*.csv
+    #       v1.3-ossivalis_non_matching_sha_*.csv
+    #       v1.3-ossivalis_tested_platforms_*.csv
+    #     if-no-files-found: ignore
 
     # - name: Execute test
     #   if: (( inputs.skip_tests != 'true' )) && (( startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' || inputs.run_all == 'true' )) && (( github.repository == 'duckdb/duckdb' ))
