--- a/.github/actions/build_extensions_dockerized/action.yml
+++ b/.github/actions/build_extensions_dockerized/action.yml
@@ -14,6 +14,9 @@ inputs:
   override_git_describe:
     description: 'Override git describe'
     default: ''
+  build_complete_extensions_set:
+    description: 'Whether all extensions needs to be built'
+    default: 1
 
 runs:
   using: "composite"
@@ -62,6 +65,7 @@ runs:
           echo "DUCKDB_PLATFORM=${{ inputs.duckdb_arch }}" >> docker_env.txt
           echo "OVERRIDE_GIT_DESCRIBE=${{ inputs.override_git_describe }}" >> docker_env.txt
           echo "LINUX_CI_IN_DOCKER=1" >> docker_env.txt
+          echo "BUILD_COMPLETE_EXTENSION_SET=${{ inputs.build_complete_extensions_set }}" >> docker_env.txt
 
       - name: Generate timestamp for Ccache entry
         shell: bash
