--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,11 @@ if (DUCKDB_EXPLICIT_PLATFORM)
     add_definitions(-DDUCKDB_CUSTOM_PLATFORM=${DUCKDB_EXPLICIT_PLATFORM})
 endif()
 
+option (BUILD_COMPLETE_EXTENSION_SET "Whether we need to actually build the complete set" TRUE)
+if (DEFINED ENV{BUILD_COMPLETE_EXTENSION_SET})
+     set(BUILD_COMPLETE_EXTENSION_SET "$ENV{BUILD_COMPLETE_EXTENSION_SET}")
+endif()
+
 option (WASM_ENABLED "Are DuckDB-Wasm extensions build enabled" FALSE)
 if (DEFINED ENV{WASM_EXTENSIONS})
      set(WASM_ENABLED "$ENV{WASM_EXTENSIONS}")
