--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -150,6 +150,8 @@ jobs:
           duckdb_arch: ${{ matrix.duckdb_arch }}
           run_tests: ${{ inputs.skip_tests != 'true' }}
           override_git_describe: ${{ inputs.override_git_describe }}
+          build_complete_extensions_set: 1
+          # Note that build_complete_extensions_set needs to be 1 (that is also the default value) for 'Checks extension entries' to work correctly
 
       - uses: actions/upload-artifact@v4
         with:
@@ -193,6 +195,7 @@ jobs:
           duckdb_arch: ${{ matrix.duckdb_arch }}
           run_tests: ${{ inputs.skip_tests != 'true' }}
           override_git_describe: ${{ inputs.override_git_describe }}
+          build_complete_extensions_set: ${{ github.event_name != 'pull_request' && 1 || 0 }}
 
       - uses: actions/upload-artifact@v4
         with:
@@ -235,6 +238,7 @@ jobs:
           duckdb_arch: ${{ matrix.duckdb_arch }}
           run_tests: ${{ inputs.skip_tests != 'true' }}
           override_git_describe: ${{ inputs.override_git_describe }}
+          build_complete_extensions_set: ${{ github.event_name != 'pull_request' && 1 || 0 }}
 
       - uses: actions/upload-artifact@v4
         with:
