--- a/.github/workflows/OSX.yml
+++ b/.github/workflows/OSX.yml
@@ -313,9 +313,10 @@ jobs:
     with:
       runs_on: ${{ matrix.config.runs_on }}
       duckdb_arch: ${{ matrix.config.duckdb_arch }}
-      duckdb_binary: ${{ matrix.config.duckdb_binary }}
+      duckdb_binary: 'osx'
       nightly_build: 'osx'
       branch: 'v1.3-ossivalis'
+
     # steps:
     # - uses: actions/checkout@v4
     #   with:
