Avoid saving ccache on pull_requests

--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -152,6 +152,7 @@ jobs:
           override_git_describe: ${{ inputs.override_git_describe }}
           build_complete_extensions_set: 1
           # Note that build_complete_extensions_set needs to be 1 (that is also the default value) for 'Checks extension entries' to work correctly
+          save_cache: ${{ github.event_name != 'pull_request' && 1 || 0 }}
 
       - uses: actions/upload-artifact@v4
         with:
@@ -196,6 +197,7 @@ jobs:
           run_tests: ${{ inputs.skip_tests != 'true' }}
           override_git_describe: ${{ inputs.override_git_describe }}
           build_complete_extensions_set: ${{ github.event_name != 'pull_request' && 1 || 0 }}
+          save_cache: ${{ github.event_name != 'pull_request' && 1 || 0 }}
 
       - uses: actions/upload-artifact@v4
         with:
@@ -239,6 +241,7 @@ jobs:
           run_tests: ${{ inputs.skip_tests != 'true' }}
           override_git_describe: ${{ inputs.override_git_describe }}
           build_complete_extensions_set: ${{ github.event_name != 'pull_request' && 1 || 0 }}
+          save_cache: ${{ github.event_name != 'pull_request' && 1 || 0 }}
 
       - uses: actions/upload-artifact@v4
         with:
