--- a/src/execution/physical_plan/CMakeLists.txt
+++ b/src/execution/physical_plan/CMakeLists.txt
@@ -46,7 +46,7 @@ add_library_unity(
   plan_expression_get.cpp
   plan_recursive_cte.cpp
   plan_cte.cpp
-  plan_ussr_insertion.cpp)
+  plan_unified_string_dictionary_insertion.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_physical_plan>
     PARENT_SCOPE)
