adding encryption test infra

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,7 @@ if(${ENABLE_UNITTEST_CPP_TESTS})
   add_subdirectory(arrow)
   add_subdirectory(catalog)
   add_subdirectory(common)
+  add_subdirectory(encryption)
   add_subdirectory(logging)
   add_subdirectory(memoryleak)
   add_subdirectory(parallel_csv)
