Move TestForceStorage/Reload/MemoryLeaks to test configuration

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 include_directories(../third_party/catch)
 include_directories(../third_party/tpce-tool/include)
 include_directories(../third_party/sqlite/include)
+include_directories(sqlite)
 include_directories(include)
 
 # Allows loading tests from registered extensions
