add test-install-load-extensions: reusable job to OSX, Linux, Windows builds creating workflows

--- a/.github/workflows/LinuxRelease.yml
+++ b/.github/workflows/LinuxRelease.yml
@@ -343,6 +343,23 @@ jobs:
         echo "There are differences in src/include/duckdb/main/extension_entries.hpp"
         echo "Check the uploaded extension_entries.hpp (in the workflow Summary), and check that in instead of src/include/duckdb/main/extension_entries.hpp"
 
+ test-install-load-extensions:
+  name: Test Linux Extensions
+  needs: 
+    - upload-linux-extensions-64-aarch64
+    - upload-linux-extensions-64-musl
+    - upload-linux-extensions-64
+  uses: duckdb/duckdb-build-status/.github/workflows/VerifyBuild.yml@main
+  strategy:
+    matrix:
+      config: [ { runs_on: ubuntu-latest, duckdb_arch: amd64, duckdb_binary: linux-amd64 }, { runs_on: ubuntu-24.04-arm, duckdb_arch: arm64, duckdb_binary: linux-arm64 } ]
+  with:
+    runs_on: ${{ matrix.config.runs_on }}
+    duckdb_arch: ${{ matrix.config.duckdb_arch }}
+    duckdb_binary: ${{ matrix.config.duckb_binary }}
+    nightly_build: 'linux'
+    branch: ${{ github.ref_name }}
+
  symbol-leakage:
     name: Symbol Leakage
     if: ${{ inputs.skip_tests != 'true' }}
