clean benchmark data directory

--- a/.github/workflows/Regression.yml
+++ b/.github/workflows/Regression.yml
@@ -125,6 +125,10 @@ jobs:
         if: always()
         shell: bash
         run: |
+          rm -R duckdb_benchmark_data
+          mkdir -p duckdb_benchmark_data
+          rm -R duckdb/duckdb_benchmark_data
+          mkdir -p duckdb/duckdb_benchmark_data
           python scripts/regression/test_runner.py --old duckdb/build/release/benchmark/benchmark_runner --new build/release/benchmark/benchmark_runner --benchmarks .github/regression/micro.csv --verbose --threads 2
 
       - name: Regression Test Ingestion Perf
